src/test/scala/au/edu/mq/comp/perentiemq/iml/funcerr3.out
src/test/scala/au/edu/mq/comp/perentiemq/iml/funcerr3.iml:3:11: error: expression expected
    a = f();
          ^

