src/test/scala/au/edu/mq/comp/perentiemq/iml/funcerr3.iml
// No arguments in call
def funcerr3(a) : (b) {
    a = f();
}
